[workspace]
members = ["dist"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
dist = { path = "dist" }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs"] }
