[workspace]
members = ["dist"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
embed_it = { version = "7.1.0" }

[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
bytes = "1.11.0"
dist = { path = "dist" }
embed_it = { workspace = true }
headers = "0.4.1"
headers-core = "0.3.0"
http = "1.4.0"
mime_guess = "2.0.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
